--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="موقع صحيح البخاري | صدقة البخاري">
     <meta itemprop="name" content="صحيح البخاري">
     <meta itemprop="description" content="موقع صحيح البخاري | صدقة جارية">
-    <meta property="og:url" content="sahih.albukharii">
+    <meta property="og:url" content="sahih.albukharii.io">
     <meta property="og:site_name" content="موقع صحيح البخاري | صدقة جارية">
     <meta property="og:title" content="أهلا بك بموقع صحيح البخاري .">
     <meta property="og:description" content="أهلا بك بموقع صحيح البخاري .">
